--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>todo app</title>
-    <link rel="stylesheet" href="todo.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -23,6 +23,6 @@
 
 
 
-    <script src="todo.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
